
BeeBEEP 5.4.3
- If option "Always open chat on new message" is enabled and "Raise previously opened 
  chat on new message" is disabled, the window is now opened minimized to show icon
  blinking on taskbar.
- Added "AllowEditNickname" option in beebeep.rc
- Fixed a bug on saving option "Recognize user by"
- Added "DisableCreateMessage" option in beebeep.rc

BeeBEEP 5.4.2
- Removed option "On close minimize on tray" for MacOSX
- Added more debug messages on user recognition
- Added "Autoresponder" when user send messages in group where he is not member
- Fixed bug: duplicate first message on chat window

BeeBEEP 5.4.1
- Fixed bug: "Transfer completed" message is not showed in chat
- File sharing window now save its geometry on close
- Create message window now save its geometry on close
- Added option "Enable maximize button"
- Groups can be created also with just one member (and you)

BeeBEEP 5.4.0
- Patched Qt 5.9.6: window state are not restored (save only geometry option added)
- Prevent "user collision" from same IP address
- Fixed "slow connection bug" at startup
- Added option "Always open chat on new message"
- Added option to remove members from group
- Added option "AllowAddMembersToGroup" in beebeep.rc
- Added option "AllowRemoveMembersFromGroup" in beebeep.rc
- Added option "Reset geometry of all windows"
- Fixed some GUI bugs
- On new message the BeeBEEP main icon also blinks

BeeBEEP 5.2.0
- Added "Create message" window to send one time message to many
- Added default multicast group address 239.255.64.75
- Added option "Use default multicast group address"
- Added option "Show users on connection"

BeeBEEP 5.0.2
- Fixed compatibility of window geometry and state with previous version
- Fixed minor bug in save settings
- Added option "Save window's geometry" on close 

BeeBEEP 5.0.1
- Added "DisableSystemProxyForConnections" option

BeeBEEP 5.0.0
- [SECURITY UPDATE] Encryption level 3 using key generated by SHA3-256 algorithm